Enumeration LoanStatus, general optimization
Adding the Enumeration LoanStatus to better manage the status.
Setting to private all the attributes.